--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="main">
       <header class="mobile deskTop">
-        <img src="../news-homepage-main/assets/images/logo.svg" alt="logo" />
+        <img src="./assets/images/logo.svg" alt="logo" />
         <input type="checkbox" id="toggle" />
         <label class="buttonContainer" for="toggle">
           <div class="button"></div>
@@ -52,7 +52,7 @@
             power of the platforms back into the hands of the people. But is it
             really fulfilling its promise?
           </p>
-          <a  href="#">READ MORE</a>
+          <a href="#">READ MORE</a>
         </div>
       </section>
       <section class="box">
@@ -60,7 +60,7 @@
           <h2>New</h2>
           <h3>Hydrogen VS Electric Cars</h3>
           <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-          <hr>
+          <hr />
         </div>
         <div class="box2">
           <h3>The Downsides of AI Artistry</h3>
@@ -68,7 +68,7 @@
             What are the possible adverse effects of on-demand AI image
             generation?
           </p>
-          <hr>
+          <hr />
         </div>
         <div class="box3">
           <h3>Is VC Funding Drying Up?</h3>
@@ -79,17 +79,17 @@
         </div>
       </section>
       <footer class="footer">
-        <img
-            src="../news-homepage-main/assets/images/image-retro-pcs.jpg"
-            alt=""/>
+        <img src="./assets/images/image-retro-pcs.jpg" alt="" />
         <div class="imgOne">
           <h3 class="first-txt">01</h3>
           <h3 class="second-txt">Reviving Retro PCs</h3>
-          <p class="third-txt">Wupgrades?hat happens when old PCs are given modern</p>
+          <p class="third-txt">
+            Wupgrades?hat happens when old PCs are given modern
+          </p>
         </div>
         <div class="imgTwo">
           <img
-            src="../news-homepage-main/assets/images/image-top-laptops.jpg"
+            src="./assets/images/image-top-laptops.jpg"
             alt=""
           />
           <h3 class="fourth-txt">02</h3>
@@ -97,10 +97,14 @@
           <p class="sixth-txt">Our best picks for various needs and budgets.</p>
         </div>
         <div class="imgThree">
-          <img src="../news-homepage-main/assets/images/image-gaming-growth.jpg" alt="">
+          <img
+            src="./assets/images/image-gaming-growth.jpg"
+            alt=""
+          />
           <h3 class="seventh-txt">03</h3>
           <h3 class="eight-txt">The Growth Of Gaming</h3>
-          <p class="nineth-txt">  How the pandemic has sparked fresh opportunities.
+          <p class="nineth-txt">
+            How the pandemic has sparked fresh opportunities.
           </p>
         </div>
       </footer>
