--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       </section>
       <footer class="footer">
-        <img src="./assets/images/image-retro-pcs.jpg" alt="" />
+        <img src="./assets/images/image-retro-pcs.jpg" alt="retro" />
         <div class="imgOne">
           <h3 class="first-txt">01</h3>
           <h3 class="second-txt">Reviving Retro PCs</h3>
@@ -88,19 +88,13 @@
           </p>
         </div>
         <div class="imgTwo">
-          <img
-            src="./assets/images/image-top-laptops.jpg"
-            alt=""
-          />
+          <img src="./assets/images/image-top-laptops.jpg" alt="laptop" />
           <h3 class="fourth-txt">02</h3>
           <h3 class="fith-txt">Top 10 Laptops of 2022</h3>
           <p class="sixth-txt">Our best picks for various needs and budgets.</p>
         </div>
         <div class="imgThree">
-          <img
-            src="./assets/images/image-gaming-growth.jpg"
-            alt=""
-          />
+          <img src="./assets/images/image-gaming-growth.jpg" alt="Gaming" />
           <h3 class="seventh-txt">03</h3>
           <h3 class="eight-txt">The Growth Of Gaming</h3>
           <p class="nineth-txt">
