--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="main">
       <header class="mobile deskTop">
-        <img src="./assets/images/logo.svg" alt="logo" />
+        <img src="./assets/images/image/logo.svg" alt="logo" />
         <input type="checkbox" id="toggle" />
         <label class="buttonContainer" for="toggle">
           <div class="button"></div>
@@ -79,7 +79,11 @@
         </div>
       </section>
       <footer class="footer">
-        <img src="./assets/images/image-retro-pcs.jpg" alt="retro" />
+        <img
+          src="./assets/images/image-retro-pcs.jpg"
+          alt="retro"
+          width="100"
+        />
         <div class="imgOne">
           <h3 class="first-txt">01</h3>
           <h3 class="second-txt">Reviving Retro PCs</h3>
@@ -88,13 +92,25 @@
           </p>
         </div>
         <div class="imgTwo">
-          <img src="./assets/images/image-top-laptops.jpg" alt="laptop" />
-          <h3 class="fourth-txt">02</h3>
-          <h3 class="fith-txt">Top 10 Laptops of 2022</h3>
-          <p class="sixth-txt">Our best picks for various needs and budgets.</p>
+          <img
+            src="./assets/images/image-top-laptops.jpg"
+            alt="laptop"
+            width="100"
+          />
+          <div class="text">
+            <h3 class="fourth-txt">02</h3>
+            <h3 class="fith-txt">Top 10 Laptops of 2022</h3>
+            <p class="sixth-txt">
+              Our best picks for various needs and budgets.
+            </p>
+          </div>
         </div>
         <div class="imgThree">
-          <img src="./assets/images/image-gaming-growth.jpg" alt="Gaming" />
+          <img
+            src="./assets/images/image-gaming-growth.jpg"
+            alt="Gaming"
+            width="100"
+          />
           <h3 class="seventh-txt">03</h3>
           <h3 class="eight-txt">The Growth Of Gaming</h3>
           <p class="nineth-txt">
