--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="main">
       <header class="mobile deskTop">
-        <img src="./assets/images/image/logo.svg" alt="logo" />
+        <img src="./assets/images/logo.svg" alt="logo" />
         <input type="checkbox" id="toggle" />
         <label class="buttonContainer" for="toggle">
           <div class="button"></div>
