--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <nav class="nav_bar_desktop nav_bar_mobile">
           <ul>
-            <i class="fa-solid fa-x"></i>
+            <!-- <i class="fa-solid fa-x"></i> -->
             <li><a href="#">Home</a></li>
             <li><a href="#">New</a></li>
             <li><a href="#">Popular</a></li>
